--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="CompileTimeFunctions\ReadAllFile.hpp">
       <Filter>Header Files\CompileTimeFunctions</Filter>
     </ClInclude>
+    <ClInclude Include="LLVMBindings.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NamespaceBuilder.cpp">
@@ -204,6 +207,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CompileTimeFunctions\ReadAllFile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LLVMBindings.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
