--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="ObjectWithMetadata.hpp" />
     <ClInclude Include="PackageDatabase.hpp" />
     <ClInclude Include="QualifiedName.hpp" />
+    <ClInclude Include="RuntimeException.hpp" />
     <ClInclude Include="SourcePointer.hpp" />
     <ClInclude Include="Target.hpp" />
     <ClInclude Include="Type.hpp" />
@@ -243,6 +244,7 @@
     <ClCompile Include="NameResolutionContext.cpp" />
     <ClCompile Include="Namespace.cpp" />
     <ClCompile Include="QualifiedName.cpp" />
+    <ClCompile Include="RuntimeException.cpp" />
     <ClCompile Include="Target.cpp" />
     <ClCompile Include="Type.cpp" />
     <ClCompile Include="TypeClassifier.cpp" />
