--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClInclude Include="CompilationResult.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RuntimeException.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -255,6 +258,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="execution\RuntimePackageDescriptor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RuntimeException.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
