building while loops

--- a/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="CompilationUnitDataBaseBuilderTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FunctionBuildingTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
