--- a/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj
+++ b/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj
@@ -167,6 +167,7 @@
   <ItemGroup>
     <ClCompile Include="CompilationUnitDataBaseBuilderTestingUtility.cpp" />
     <ClCompile Include="CompilationUnitDataBaseBuilderTests.cpp" />
+    <ClCompile Include="FunctionBuildingTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
