--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="algorithm.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="range.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="typedRange.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
