--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="LLVMIntegration\LLVMIRUtility.hpp">
       <Filter>Header Files\LLVMIntegration</Filter>
     </ClInclude>
+    <ClInclude Include="ExceptionHandling.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp">
@@ -132,6 +135,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LLVMIntegration\LLVMIRUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ExceptionHandling.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
