--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClInclude Include="LLVMBindings\Types.hpp">
       <Filter>Header Files\LLVMBindings</Filter>
     </ClInclude>
+    <ClInclude Include="CompileTimeFunctions\Boobs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NamespaceBuilder.cpp">
@@ -237,6 +240,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LLVMBindings\Types.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FunctionPredicates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GetterExecution.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
