--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="Enum.hpp" />
     <ClInclude Include="execution\ArrayValue.hpp" />
     <ClInclude Include="execution\BooleanValue.hpp" />
+    <ClInclude Include="execution\GenericOwningRuntimeWrapper.h" />
     <ClInclude Include="execution\GenericRuntimeWrapper.hpp" />
     <ClInclude Include="execution\InstructionCode.hpp" />
     <ClInclude Include="execution\IRuntimeValue.h" />
@@ -194,6 +195,7 @@
     <ClInclude Include="Field.hpp" />
     <ClInclude Include="Function.hpp" />
     <ClInclude Include="Generic.hpp" />
+    <ClInclude Include="GenericInstantiationData.hpp" />
     <ClInclude Include="Generic\GenericObject.hpp" />
     <ClInclude Include="Generic\GenericParameter.hpp" />
     <ClInclude Include="Generic\GenericVariable.hpp" />
