--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClInclude Include="printStackTrace.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GenericInstantiationData.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="execution\GenericOwningRuntimeWrapper.h">
+      <Filter>Header Files\Execution</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
