--- a/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic/LanguageLogic.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="LLVMBindings\Value.hpp">
       <Filter>Header Files\LLVMBindings</Filter>
     </ClInclude>
+    <ClInclude Include="MetadataHolderBindings.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NamespaceBuilder.cpp">
@@ -258,6 +261,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LLVMBindings\Value.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GenericUtility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
