--- a/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Utilities/Utilities.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="typedRange.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="collections.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
