--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="MetadataObject.hpp" />
     <ClInclude Include="NameResolutionContext.hpp" />
     <ClInclude Include="Namespace.hpp" />
+    <ClInclude Include="NullValueException.hpp" />
     <ClInclude Include="ObjectWithAccessibility.hpp" />
     <ClInclude Include="ObjectWithMetadata.hpp" />
     <ClInclude Include="PackageDatabase.hpp" />
