--- a/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
@@ -44,8 +44,43 @@
     </None>
     <None Include="compiler-interface\src\entry_point.cm" />
     <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
     <None Include="compiler-interface\src\entry_point.cm" />
     <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\src\build_expression.cm" />
+    <None Include="compiler-interface\src\build_function.cm" />
+    <None Include="compiler-interface\src\entry_point.cm" />
+    <None Include="compiler-interface\src\function_body.cm" />
+    <None Include="compiler-interface\src\package_registry.cm" />
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="compiler-interface\**\*.*">
+      <Filter>Resource Files</Filter>
+    </None>
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
