--- a/Compiler/CM1Compiler_CPP/LanguageLogic.Tests/LanguageLogic.Tests.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/LanguageLogic.Tests/LanguageLogic.Tests.vcxproj.filters
@@ -15,16 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LanguageLogic.Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CompilationUnitDataBaseBuilderTestingUtility.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="CompilationUnitDataBaseBuilderTests.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="FunctionBuildingTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,11 +26,5 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="CompilationUnitDataBaseBuilderTestingUtility.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="CodeCoverage.runsettings" />
   </ItemGroup>
 </Project>
